--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "A mini pop-up box plugin.",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "webpack --config webpack.config.js"
   },
   "repository": {
     "type": "git",
@@ -20,5 +21,11 @@
   "bugs": {
     "url": "https://github.com/ming131419/pop-up-box/issues"
   },
-  "homepage": "https://github.com/ming131419/pop-up-box#readme"
+  "homepage": "https://github.com/ming131419/pop-up-box#readme",
+  "dependencies": {
+    "webpack": "^5.1.3"
+  },
+  "devDependencies": {
+    "webpack-cli": "^4.1.0"
+  }
 }
