1、补充readme声明 2、添加min压缩文件

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "A mini pop-up box plugin.",
   "main": "index.js",
   "scripts": {
-    "build": "webpack --config webpack.config.js"
+    "bulid": "webpack --config webpack.config.js"
   },
   "repository": {
     "type": "git",
