修改项目名称

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "pop-up-box",
+  "name": "pxu",
   "version": "1.0.1",
   "description": "A mini pop-up box plugin.",
   "main": "index.js",
